# Shell

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: command.hpp  commands.hpp  config.hpp  interface.hpp  parser.hpp  process.hpp  syntax_tree.hpp
src/: build_command.cpp  build_syntax_tree.cpp  command.cpp  interface.cpp  main.cpp  parser.cpp  proccess.cpp  process.cpp  run_commands.cpp  run_proccesses.cpp  syntax_tree.cpp
src/commands/: cd.cpp
src/config/: get_config.cpp
src/wave_programs/: cd.cpp
tests/: CMakeLists.txt  main_test.cpp  test_parser.cpp
